--- a/ProtoDalTests/ProtoDalTests.csproj
+++ b/ProtoDalTests/ProtoDalTests.csproj
@@ -32,6 +32,12 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\Rhino.Mocks.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyClass.cs" />
@@ -39,4 +45,10 @@
     <Compile Include="SprocExtensionTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\ProtoDal\ProtoDal.csproj">
+      <Project>{8EBEBB4A-E359-4C42-98EE-3C7C6D22B771}</Project>
+      <Name>ProtoDal</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
